# aleph-node

./: .gitignore  Cargo.toml
aleph-client/: Cargo.toml
aleph-client/src/: staking.rs
benches/bags_list_vs_iter/: Cargo.toml
benches/bags_list_vs_iter/src/: bag_thresholds.rs  lib.rs  mock.rs  tests.rs
benches/payout-stakers/: Cargo.toml
benches/payout-stakers/src/: main.rs
contracts/: package.json  redspot.config.ts
contracts/button-token/: Cargo.toml  lib.rs
contracts/button_token/: lib.rs
contracts/erc20/: Cargo.toml
contracts/scripts/: deploy.sh  deploy.ts
contracts/the-button/: Cargo.toml  lib.rs
contracts/trait-erc20/: Cargo.toml  erc20.rs  lib.rs  mod.rs
contracts/yellow-button/: Cargo.toml  lib.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: main.rs
e2e-tests/src/test/: staking.rs
finality-aleph/: Cargo.toml
finality-aleph/src/data_io/: data_store.rs
flooder/: Cargo.toml
fork-off/: Cargo.toml
pallets/aleph/: Cargo.toml
pallets/elections/: Cargo.toml
pallets/elections/src/: lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
scripts/: run_nodes.sh
the_button/: Cargo.toml  lib.rs
