[package]
name = "the_button"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
# NOTE : trait or import impl
trait_erc20 = { path = "../trait-erc20", default-features = false, features = ["ink-as-dependency"] }
button_token = { path = "../button-token", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "the_button"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",    
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "trait_erc20/std",
    "button_token/std",        
]
ink-as-dependency = []
