[package]
name = "pallet-aleph"
version = "0.2.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
frame-system = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
sp-std = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
serde = "1.0"
sp-io = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
primitives = { path = "../../primitives", default-features = false}
pallet-balances = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
pallet-session = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
sp-runtime = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
sp-core = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "pallet-balances/std",
    "pallet-session/std"
]
