[package]
name = "pallet-elections"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
frame-system = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
frame-election-provider-support ={ default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
pallet-session = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
sp-std = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
primitives = { path = "../../primitives", default-features = false}
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
pallet-balances = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }
sp-core= { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }

[dev-dependencies]
sp-runtime = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "turn-off-reputation" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "frame-election-provider-support/std",
    "pallet-session/std",
    "primitives/std",
    "pallet-balances/std",
]
